fixed menu spacing

--- a/css/menu.css
+++ b/css/menu.css
@@ -77,6 +77,7 @@
             flex-direction: column;
     margin-bottom: 100px;
     position: relative;
+    align-items: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -86,7 +87,6 @@
     font-family: 'Rock Salt', cursive;
     color: var(--primary);
     font-size: 1.3em;
-    
 }
 
 .menu-line {
@@ -232,10 +232,10 @@
     }
     
     .menu-group h3 {
-        width: auto;
+        width: 100%;
         font-size: 1.1em;
         text-align: left;
-        display: inline-block;
+        display: block;
     }
 
     .menu-line {
@@ -280,6 +280,10 @@
 
     .pita {
         height: 251px;
+    }
+
+    .fal-fix {
+        height: 300px;
     }
 
     /*-- -------------------------- -->
